<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.neverpile.eureka</groupId>
  <artifactId>neverpile-eureka</artifactId>
  <packaging>pom</packaging>
  <version>0.1.0-SNAPSHOT</version>

  <properties>
    <java.version>17</java.version>

    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!--atomikos Fix version due to compatibility problems with Spring boot 3.4 hosted on https://levigo.de/maven2/repository/third-party/ -->
    <atomikos.version>6.0.1-FIX</atomikos.version>
    <aws-s3.version>1.12.671</aws-s3.version>
    <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
    <cassandra-driver-core.version>4.17.0</cassandra-driver-core.version>
    <ehcache.version>3.10.8</ehcache.version>
    <elasticsearch-rest-high-level-client.version>7.17.28</elasticsearch-rest-high-level-client.version>
    <elasticsearch.version>7.17.28</elasticsearch.version>
    <eureka-webjar.version>1.0.25</eureka-webjar.version>
    <feign.version>8.18.0</feign.version>
    <guava.version>33.4.8-jre</guava.version>
    <ignite-aws.version>2.11.1</ignite-aws.version>
    <ignite-cloud.version>2.13.0</ignite-cloud.version>
    <ignite.version>2.14.0</ignite.version>
    <jetty.version>12.0.5</jetty.version>
    <lucene.version>8.11.3</lucene.version>
    <metrics-core.version>4.2.30</metrics-core.version>
    <modelmapper.version>1.1.3</modelmapper.version>
    <neverpile-commons.version>1.21.3</neverpile-commons.version>
    <opentracing.version>0.33.0</opentracing.version>
    <snakeyaml.version>2.4</snakeyaml.version>
    <spring-boot-admin.version>3.4.5</spring-boot-admin.version>
    <spring-boot.version>3.4.5</spring-boot.version>
    <spring-security-oauth2.version>2.6.8</spring-security-oauth2.version>
    <springfox.version>3.0.0</springfox.version>
    <swagger.version>2.2.30</swagger.version>
    <url-crypto-kit.version>2.1.7</url-crypto-kit.version>

    <!-- Test -->
    <jmockit.version>1.49</jmockit.version>
    <mockito-core.version>5.17.0</mockito-core.version>
    <rest-assured.version>5.5.1</rest-assured.version>

    <!-- plugins -->
    <docker-maven-plugin.version>0.46.0</docker-maven-plugin.version>
    <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
    <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
    <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
    <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
    <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
    <versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
  </properties>

  <repositories>
    <repository>
      <id>neverpile</id>
      <name>Neverpile Apache Maven Packages</name>
      <url>https://registry.neverpile.com/repository/maven-releases/</url>
    </repository>
  </repositories>

  <modules>
    <module>neverpile-eureka-core</module>
    <module>neverpile-eureka-objectstore-filesystem</module>
    <module>neverpile-eureka-objectstore-ehcache</module>
    <module>neverpile-eureka-objectstore-s3</module>
    <module>neverpile-eureka-objectstore-cassandra</module>
    <module>neverpile-eureka-security-oauth2</module>
    <module>neverpile-eureka-search-elastic</module>
    <module>neverpile-eureka-ignite</module>
    <module>neverpile-eureka-hazelcast</module>
    <module>neverpile-eureka-authorization</module>
    <module>neverpile-eureka-plugin-metadata</module>
    <module>neverpile-eureka-plugin-audit</module>
    <module>neverpile-eureka-bom</module>
    <module>neverpile-eureka-objectstore-oam</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- Spring-Boot -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>com.atomikos</groupId>
        <artifactId>transactions-spring-boot3-starter</artifactId>
        <version>${atomikos.version}</version>
      </dependency>

      <!-- neverpile-commons -->
      <dependency>
        <groupId>com.neverpile.commons</groupId>
        <artifactId>neverpile-commons-authorization</artifactId>
        <version>${neverpile-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.commons</groupId>
        <artifactId>neverpile-commons-openapi</artifactId>
        <version>${neverpile-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.commons</groupId>
        <artifactId>neverpile-commons-opentracing</artifactId>
        <version>${neverpile-commons.version}</version>
      </dependency>

      <!-- Swagger -->
      <dependency>
        <groupId>io.swagger.core.v3</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>${swagger.version}</version>
      </dependency>
      <dependency>
        <groupId>io.swagger.core.v3</groupId>
        <artifactId>swagger-models</artifactId>
        <version>${swagger.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlet</artifactId>
        <version>${jetty.version}</version>
      </dependency>

      <!-- elasticsearch -->
      <dependency>
        <groupId>org.elasticsearch</groupId>
        <artifactId>elasticsearch</artifactId>
        <version>${elasticsearch.version}</version>
      </dependency>
      <dependency>
        <groupId>org.elasticsearch.client</groupId>
        <artifactId>elasticsearch-rest-high-level-client</artifactId>
        <version>${elasticsearch-rest-high-level-client.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- other stuff -->
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.datastax.oss</groupId>
        <artifactId>java-driver-core</artifactId>
        <version>${cassandra-driver-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito-core.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.dropwizard.metrics</groupId>
        <artifactId>metrics-core</artifactId>
        <version>${metrics-core.version}</version>
      </dependency>

      <!-- neverpile commons -->
      <dependency>
        <groupId>com.neverpile</groupId>
        <artifactId>url-crypto-kit</artifactId>
        <version>${url-crypto-kit.version}</version>
      </dependency>

      <!-- internal dependencies -->
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-ignite</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-objectstore-filesystem</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-objectstore-ehcache</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-objectstore-cassandra</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-objectstore-s3</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-security-oauth2</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-search-elastic</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>neverpile-eureka-authorization</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-boot-starter</artifactId>
        <version>${springfox.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-authorization</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.modelmapper</groupId>
        <artifactId>modelmapper</artifactId>
        <version>${modelmapper.version}</version>
      </dependency>
      <dependency>
        <groupId>de.codecentric</groupId>
        <artifactId>spring-boot-admin-starter-client</artifactId>
        <version>${spring-boot-admin.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-hazelcast</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-plugin-metadata</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka.client</groupId>
        <artifactId>neverpile-eureka-client-webjar</artifactId>
        <version>${eureka-webjar.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-plugin-audit</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-test-support</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.ehcache</groupId>
        <artifactId>ehcache</artifactId>
        <version>${ehcache.version}</version>
      </dependency>

      <dependency>
        <groupId>io.opentracing</groupId>
        <artifactId>opentracing-api</artifactId>
        <version>${opentracing.version}</version>
      </dependency>
      <dependency>
        <groupId>io.opentracing</groupId>
        <artifactId>opentracing-noop</artifactId>
        <version>${opentracing.version}</version>
      </dependency>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>rest-assured</artifactId>
        <version>${rest-assured.version}</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-osgi</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>${snakeyaml.version}</version>
      </dependency>
      <!-- TODO: delete when ignite-aws is updated-->
      <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcprov-jdk15on</artifactId>
        <version>${bcprov-jdk15on.version}</version>
      </dependency>
      <!-- TODO: delete when ignite-aws is updated-->
      <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcprov-ext-jdk15on</artifactId>
        <version>${bcprov-jdk15on.version}</version>
      </dependency>
     <!-- TODO: to be deleted after when elasticsearch is updated-->
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>4.5.14</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- Provide JUnit 5 API -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- and the engine for surefire and failsafe -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <release>${java.version}</release>
            <forceJavacCompilerUse>true</forceJavacCompilerUse>
            <!-- required for [Parameter Name Discovery](https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-3.2-Release-Notes#parameter-name-discovery) -->
            <parameters>true</parameters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven-source-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${versions-maven-plugin.version}</version>
          <configuration>
            <excludeProperties>modelmapper.version,lucene.version</excludeProperties>
            <ruleSet>
              <ignoreVersions>
                <ignoreVersion>
                  <type>regex</type>
                  <version>(.+-SNAPSHOT|.+-M\d|.+-(rc|RC).*)</version>
                </ignoreVersion>
                <ignoreVersion>
                  <type>regex</type>
                  <version>.+-(alpha|beta).*</version>
                </ignoreVersion>
                <ignoreVersion>
                  <type>regex</type>
                  <version>.+does-not-exist.*</version>
                </ignoreVersion>
              </ignoreVersions>
            </ruleSet>
            <properties>
              <property>
                <name>elasticsearch.version</name>
                <version>[7.17.0,7.18.0-!)</version>
              </property>
              <property>
                <name>ignite.version</name>
                <version>[2.14.0,2.15.0-!)</version>
              </property>
            </properties>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <!--
            Fix for Ignite problem:
            "Ignite uses proprietary SDK APIs that are not available by default. You need to pass specific flags to JVM to make these APIs available." [1]
            [1]:https://ignite.apache.org/docs/2.14.0/quick-start/java#running-ignite-with-java-11-or-later
           -->
          <argLine>
            --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
            --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
            --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
            --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
            --add-opens=java.base/java.io=ALL-UNNAMED
            --add-opens=java.base/java.nio=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
            --add-opens=java.base/java.math=ALL-UNNAMED
            --add-opens=java.base/java.time=ALL-UNNAMED
            --add-opens=java.sql/java.sql=ALL-UNNAMED
          </argLine>
          <excludes>
            <exclude>**/*IT.java</exclude>
          </excludes>
          <forkCount>1</forkCount>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
        <configuration>
          <skipITs>${skipIntegrationTests}</skipITs>
          <forkCount>1</forkCount>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.fabric8</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <version>${docker-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>skip-integration-tests</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <skipIntegrationTests>true</skipIntegrationTests>
      </properties>
    </profile>
    <profile>
      <id>run-integration-tests</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <skipIntegrationTests>false</skipIntegrationTests>
      </properties>
    </profile>
  </profiles>
</project>